--- a/charts/tekton-ci-chart/values.yaml
+++ b/charts/tekton-ci-chart/values.yaml
@@ -6,7 +6,7 @@ image:
 serviceAccountName: pipeline
 
 git:
-  repo-url: https://github.com/fhopfensperger/simple-go-app.git
+  repoUrl: https://github.com/fhopfensperger/simple-go-app.git
 
 
 ingress:
