Update ingress to match service

--- a/charts/tekton-ci-chart/templates/ingress.yaml
+++ b/charts/tekton-ci-chart/templates/ingress.yaml
@@ -32,7 +32,7 @@ spec:
           {{- range .paths }}
           - path: {{ . }}
             backend:
-              serviceName: {{ $fullName }}
+              serviceName: el-{{ $fullName }}
               servicePort: 8080
           {{- end }}
     {{- end }}
