--- a/tekton-ci/pipeline-role.yaml
+++ b/tekton-ci/pipeline-role.yaml
@@ -11,4 +11,4 @@ rules:
   verbs: ["get", "create", "update", "patch"]
 - apiGroups: [""]
   resources: ["configmaps"]
-  verbs: ["get", "create", "update", "patch", "list"]
+  verbs: ["get", "create", "update", "patch", "list", "watch"]
