--- a/tekton-ci/pipeline-role.yaml
+++ b/tekton-ci/pipeline-role.yaml
@@ -18,3 +18,6 @@ rules:
 - apiGroups: ["triggers.tekton.dev"]
   resources: ["triggers"]
   verbs: ["get", "create", "update", "patch", "list", "watch"]
+- apiGroups: ["triggers.tekton.dev"]
+  resources: ["triggerbindings"]
+  verbs: ["get", "create", "update", "patch", "list", "watch"]
