--- a/tekton-ci/pipeline-role.yaml
+++ b/tekton-ci/pipeline-role.yaml
@@ -21,3 +21,6 @@ rules:
 - apiGroups: ["triggers.tekton.dev"]
   resources: ["triggerbindings"]
   verbs: ["get", "create", "update", "patch", "list", "watch"]
+- apiGroups: ["triggers.tekton.dev"]
+  resources: ["triggertemplates"]
+  verbs: ["get", "create", "update", "patch", "list", "watch"]
