--- a/tekton-ci/pipeline-role.yaml
+++ b/tekton-ci/pipeline-role.yaml
@@ -24,6 +24,9 @@ rules:
 - apiGroups: ["triggers.tekton.dev"]
   resources: ["triggertemplates"]
   verbs: ["get", "create", "update", "patch", "list", "watch"]
+- apiGroups: ["tekton.dev"]
+  resources: ["pipelineruns"]
+  verbs: ["get", "create", "update", "patch", "list", "watch"]
 - apiGroups: [""]
   resources: ["users", "groups", "serviceaccounts"]
   verbs: ["impersonate"]
