--- a/charts/tekton-ci-chart/templates/trigger-template.yaml
+++ b/charts/tekton-ci-chart/templates/trigger-template.yaml
@@ -30,7 +30,9 @@ spec:
       - name: git-revision
         value: "$(tt.params.git-revision)"
       - name: IMAGE
-        value: {{ .Values.dockerregistry}}/{{ .Values.image.repository }}:$(tt.params.git-revision)
+        value: {{ .Values.dockerregistry}}/{{ .Values.image.repository }}
+      - name: TAG
+        vaule: $(tt.params.git-revision)
       workspaces:
         - name: shared-workspace
           persistentvolumeclaim:
