--- a/tekton-ci/buildah.yaml
+++ b/tekton-ci/buildah.yaml
@@ -22,6 +22,8 @@ spec:
   params:
     - name: IMAGE
       description: Reference of the image buildah will produce.
+    - name: TAG
+      description: Reference of the image tag buildah will produce.
     - name: BUILDER_IMAGE
       description: The location of the buildah builder image.
       default: docker.io/fhopfensperger/buildah
@@ -56,7 +58,7 @@ spec:
 
   steps:
     - name: build
-      image: $(params.BUILDER_IMAGE)
+      image: $(params.BUILDER_IMAGE):$(params.TAG)
       workingDir: $(workspaces.source.path)
       script: |
         buildah --storage-driver=$(params.STORAGE_DRIVER) bud \
@@ -64,7 +66,9 @@ spec:
           --platform="linux/arm" \
           --tls-verify=$(params.TLSVERIFY) \
           --no-cache \
-          -f $(params.DOCKERFILE) -t $(params.IMAGE) $(params.CONTEXT)
+          -f $(params.DOCKERFILE) -t $(params.IMAGE):$(params.TAG) $(params.CONTEXT)
+        
+        buildah tag $(params.IMAGE):$(params.TAG) $(params.IMAGE):latest
       volumeMounts:
         - name: varlibcontainers
           mountPath: /var/lib/containers
@@ -72,14 +76,20 @@ spec:
         privileged: true
 
     - name: push
-      image: $(params.BUILDER_IMAGE)
+      image: $(params.BUILDER_IMAGE):$(params.TAG)
       workingDir: $(workspaces.source.path)
       script: |
         buildah --storage-driver=$(params.STORAGE_DRIVER) push \
           $(params.PUSH_EXTRA_ARGS) --tls-verify=$(params.TLSVERIFY) \
           --disable-compression \
-          --digestfile $(workspaces.source.path)/image-digest $(params.IMAGE) \
-          docker://$(params.IMAGE)
+          --digestfile $(workspaces.source.path)/image-digest $(params.IMAGE):$(params.TAG) \
+          docker://$(params.IMAGE):$(params.TAG)
+
+        buildah --storage-driver=$(params.STORAGE_DRIVER) push \
+          $(params.PUSH_EXTRA_ARGS) --tls-verify=$(params.TLSVERIFY) \
+          --disable-compression \
+          --digestfile $(workspaces.source.path)/image-digest $(params.IMAGE):latest \
+          docker://$(params.IMAGE):latest
       volumeMounts:
         - name: varlibcontainers
           mountPath: /var/lib/containers
@@ -87,7 +97,7 @@ spec:
         privileged: true
 
     - name: digest-to-results
-      image: $(params.BUILDER_IMAGE)
+      image: $(params.BUILDER_IMAGE):$(params.TAG)
       script: cat $(workspaces.source.path)/image-digest | tee /tekton/results/IMAGE_DIGEST
 
   volumes:
