--- a/tekton-ci/pipeline.yaml
+++ b/tekton-ci/pipeline.yaml
@@ -16,6 +16,9 @@ spec:
     - name: IMAGE
       type: string
       description: image to be build from the code
+    - name: TAG
+      type: string
+      description: image tag to be build from the code
   tasks:
     - name: fetch-repository
       taskRef:
