--- a/tekton-ci/buildah.yaml
+++ b/tekton-ci/buildah.yaml
@@ -58,7 +58,7 @@ spec:
 
   steps:
     - name: build
-      image: $(params.BUILDER_IMAGE):$(params.TAG)
+      image: $(params.BUILDER_IMAGE)
       workingDir: $(workspaces.source.path)
       script: |
         buildah --storage-driver=$(params.STORAGE_DRIVER) bud \
@@ -76,7 +76,7 @@ spec:
         privileged: true
 
     - name: push
-      image: $(params.BUILDER_IMAGE):$(params.TAG)
+      image: $(params.BUILDER_IMAGE)
       workingDir: $(workspaces.source.path)
       script: |
         buildah --storage-driver=$(params.STORAGE_DRIVER) push \
