--- a/tekton-ci/buildah.yaml
+++ b/tekton-ci/buildah.yaml
@@ -97,7 +97,7 @@ spec:
         privileged: true
 
     - name: digest-to-results
-      image: $(params.BUILDER_IMAGE):$(params.TAG)
+      image: $(params.BUILDER_IMAGE)
       script: cat $(workspaces.source.path)/image-digest | tee /tekton/results/IMAGE_DIGEST
 
   volumes:
