Remove wd and /

--- a/charts/tekton-ci-chart/values.yaml
+++ b/charts/tekton-ci-chart/values.yaml
@@ -8,7 +8,7 @@ git:
   
 cicd:
   repoUrl: https://github.com/fhopfensperger/gitops-cicd.git
-  filepath: ./charts/simple-go-app/values.yaml
+  filepath: charts/simple-go-app/values.yaml
 
 ingress:
   enabled: true
