--- a/tekton-ci/pipeline.yaml
+++ b/tekton-ci/pipeline.yaml
@@ -56,6 +56,8 @@ spec:
           value: $(params.TAG)
         - name: FORMAT
           value: "docker"
+        - name: BUILD_EXTRA_ARGS
+          value: BUILD_VERSION=$(params.TAG)
       workspaces:
         - name: source
           workspace: shared-workspace
